<resources>
    <string name="app_name">PZ2</string>
    <string name="WelcomeText">Пожалуй, лучший фитнес\n трекер в ДВФУ</string>
    <string name="RegistrationTextButton">Зарегистрироваться</string>
    <string name="LoginButton">Уже есть аккаунт?</string>
    <string name="SubWelcomeText">Созданный студентами</string>
    <string name="bicycles">\?\n</string>
    <string name="RegistrationText">Регистрация</string>
    <string name="LoginText">Логин</string>
    <string name="NicknameText">Имя или никнейм</string>
    <string name="PasswordText">Пароль</string>
    <string name="RepeatPasswordText">Повторите пароль</string>
    <string name="GenderText">Пол</string>
    <string name="Male">Мужской</string>
    <string name="Female">Женский</string>
    <string name="Other">Другой</string>
    <string name="agreement">Нажимая на кнопку, вы соглашаетесь \nс политикой конфиденциальности и обработки персональных данных, а также принимаете пользовательское соглашение</string>
    <string name="EnterText">Вход</string>
    <string name="EnterTextButton">Войти</string>
    <string name="user_activity">Мои</string>
    <string name="friends_activity">Пользователей</string>
    <string name="activity">Активность</string>
    <string name="profile">Профиль</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="time_to">Время потренить</string>
    <string name="time_to_under">Нажимай на кнопку ниже и начинаем трекать активность</string>
    <string name="start_activity_text">Погнали? :)</string>
    <string name="start_activity">Начать</string>
    <string name="save_changes">Сохранить</string>
    <string name="login_hint">Логин</string>
    <string name="username_hint">Имя или никнейм</string>
    <string name="change_password_text">Изменить пароль</string>
    <string name="logout_text">Выйти</string>
    <string name="old_password_hint">Старый пароль</string>
    <string name="new_password_hint">Новый пароль</string>
    <string name="repeat_new_password_hint">Повторите новый пароль</string>
    <string name="agree_changes_text">Принять</string>
</resources>